# qin_wizard

./: .gitignore  README.md
base/: Cargo.toml  tauri.conf.json
base/icons/: icon.icns
view/: package-lock.json  package.json  tsconfig.json  webpack.config.js
view/public/: index.html  index.js  view.css
view/src/: index.ts  view-logger.ts  view-setup.ts  view.ts
view/types/: view-logger.d.ts  view-logger.d.ts.map  view-setup.d.ts  view-setup.d.ts.map  view.d.ts  view.d.ts.map
